# bedrock-core

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Kconfig  LICENSE-BSD-3-Claude.md  LICENSE-GPL-3.0.md  README.md  ROADMAP.md  chorus.build
3rd/tools/kconfig/: Cargo.toml
3rd/tools/kconfig/src/: lib.rs
arch/arm-cortex-m/: br_hal_context.c  br_hal_timer.c  br_hal_uart.c  startup.c
arch/host-x86-64/: br_hal_context.c  br_hal_timer.c  br_hal_uart.c
boards/qemu-cortex-m3/: defconfig  linker.ld
docs/en/: api-reference.md  architecture.md  building.md  porting-guide.md  stack-overflow-detection.md  task-deletion.md
docs/ru/: api-reference.md  architecture.md  building.md  porting-guide.md  stack-overflow-detection.md  task-deletion.md
examples/: main.c  test_task_delete.c
include/bedrock/: bedrock.h  br_assert.h  br_config.h  br_hal.h  br_types.h
kernel/: br_ipc.c  br_panic.c  br_sched.c  br_task.c  br_time.c
lib/: br_pool.c  br_pool.h
